fix: Ajuste para controlador estudiante_vinculacion_trabajo_grado
