# swagger/swagger.yml
@@ -3089,6 +3089,123 @@ paths:
           description: '{string} delete success!'
         "404":
           description: not found resource
+  /estudiante_vinculacion_trabajo_grado/:
+    get:
+      tags:
+      - estudiante_vinculacion_trabajo_grado
+      description: get Estudiante_Vinculacion_Trabajo_Grado
+      operationId: Estudiante_Vinculacion_Trabajo_GradoController.GetAll
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Estudiante_Vinculacion_Trabajo_Grado'
+        "403":
+          description: ""
+    post:
+      tags:
+      - estudiante_vinculacion_trabajo_grado
+      description: create Estudiante_Vinculacion_Trabajo_Grado
+      operationId: Estudiante_Vinculacion_Trabajo_GradoController.Create
+      parameters:
+      - in: body
+        name: body
+        description: body for Estudiante_Vinculacion_Trabajo_Grado content
+        required: true
+        schema:
+          $ref: '#/definitions/models.Estudiante_Vinculacion_Trabajo_Grado'
+      responses:
+        "201":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Estudiante_Vinculacion_Trabajo_Grado'
+        "403":
+          description: body is empty
+  /estudiante_vinculacion_trabajo_grado/{documento}:
+    get:
+      tags:
+      - estudiante_vinculacion_trabajo_grado
+      description: get Estudiante_Vinculacion_Trabajo_Grado by id
+      operationId: Estudiante_Vinculacion_Trabajo_GradoController.GetOne
+      parameters:
+      - in: path
+        name: documento
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.EstudianteVinculacionTrabajoGrado'
+        "403":
+          description: :documento is empty
+  /estudiante_vinculacion_trabajo_grado/{id}:
+    put:
+      tags:
+      - estudiante_vinculacion_trabajo_grado
+      description: update the Estudiante_Vinculacion_Trabajo_Grado
+      operationId: Estudiante_Vinculacion_Trabajo_GradoController.Put
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to update
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: body for Estudiante_Vinculacion_Trabajo_Grado content
+        required: true
+        schema:
+          $ref: '#/definitions/models.Estudiante_Vinculacion_Trabajo_Grado'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Estudiante_Vinculacion_Trabajo_Grado'
+        "403":
+          description: :id is not int
+    delete:
+      tags:
+      - estudiante_vinculacion_trabajo_grado
+      description: delete the Estudiante_Vinculacion_Trabajo_Grado
+      operationId: Estudiante_Vinculacion_Trabajo_GradoController.Delete
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to delete
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} delete success!'
+        "403":
+          description: id is empty
   /evaluacion_trabajo_grado/:
     get:
       tags:
@@ -5744,61 +5861,61 @@ paths:
         "404":
           description: not found resource
 definitions:
-  214698.<nil>.EspacioAcademicoInscrito:
+  218712.<nil>.EspacioAcademicoInscrito:
     title: EspacioAcademicoInscrito
     type: object
-  214757.<nil>.AsignaturaTrabajoGrado:
+  218771.<nil>.AsignaturaTrabajoGrado:
     title: AsignaturaTrabajoGrado
     type: object
-  218221.<nil>.EspacioAcademicoInscrito:
+  222235.<nil>.EspacioAcademicoInscrito:
     title: EspacioAcademicoInscrito
     type: object
-  218281.<nil>.AsignaturaTrabajoGrado:
+  222295.<nil>.AsignaturaTrabajoGrado:
     title: AsignaturaTrabajoGrado
     type: object
-  224952.<nil>.VinculacionTrabajoGrado:
+  229003.<nil>.VinculacionTrabajoGrado:
     title: VinculacionTrabajoGrado
     type: object
-  225125.<nil>.DetalleTrabajoGrado:
+  229176.<nil>.DetalleTrabajoGrado:
     title: DetalleTrabajoGrado
     type: object
-  225450.<nil>.VinculacionTrabajoGrado:
+  229501.<nil>.VinculacionTrabajoGrado:
     title: VinculacionTrabajoGrado
     type: object
-  225647.<nil>.VinculacionTrabajoGrado:
+  229698.<nil>.VinculacionTrabajoGrado:
     title: VinculacionTrabajoGrado
     type: object
-  226091.<nil>.EspacioAcademicoInscrito:
+  230142.<nil>.EspacioAcademicoInscrito:
     title: EspacioAcademicoInscrito
     type: object
-  226359.<nil>.EspacioAcademicoInscrito:
+  230410.<nil>.EspacioAcademicoInscrito:
     title: EspacioAcademicoInscrito
     type: object
-  226449.<nil>.DetalleTrabajoGrado:
+  230500.<nil>.DetalleTrabajoGrado:
     title: DetalleTrabajoGrado
     type: object
-  226531.<nil>.DetalleTrabajoGrado:
+  230582.<nil>.DetalleTrabajoGrado:
     title: DetalleTrabajoGrado
     type: object
-  248812.<nil>.Comentario:
+  252863.<nil>.Comentario:
     title: Comentario
     type: object
-  253875.<nil>.DetalleSolicitud:
+  257926.<nil>.DetalleSolicitud:
     title: DetalleSolicitud
     type: object
-  253915.<nil>.UsuarioSolicitud:
+  257966.<nil>.UsuarioSolicitud:
     title: UsuarioSolicitud
     type: object
-  256196.<nil>.EstudianteTrabajoGrado:
+  260247.<nil>.EstudianteTrabajoGrado:
     title: EstudianteTrabajoGrado
     type: object
-  256341.<nil>.AreasTrabajoGrado:
+  260392.<nil>.AreasTrabajoGrado:
     title: AreasTrabajoGrado
     type: object
-  256388.<nil>.VinculacionTrabajoGrado:
+  260439.<nil>.VinculacionTrabajoGrado:
     title: VinculacionTrabajoGrado
     type: object
-  256441.<nil>.AsignaturaTrabajoGrado:
+  260492.<nil>.AsignaturaTrabajoGrado:
     title: AsignaturaTrabajoGrado
     type: object
   models.AreaConocimiento:
@@ -5840,7 +5957,8 @@ definitions:
       Activo:
         type: boolean
       AreaConocimiento:
-        $ref: '#/definitions/models.AreaConocimiento'
+        type: integer
+        format: int64
       Id:
         type: integer
         format: int64
@@ -6224,6 +6342,9 @@ definitions:
         format: int64
       TrabajoGrado:
         $ref: '#/definitions/models.TrabajoGrado'
+  models.Estudiante_Vinculacion_Trabajo_Grado:
+    title: Estudiante_Vinculacion_Trabajo_Grado
+    type: object
   models.EstudianteTrabajoGrado:
     title: EstudianteTrabajoGrado
     type: object
@@ -6238,6 +6359,31 @@ definitions:
         format: int64
       TrabajoGrado:
         $ref: '#/definitions/models.TrabajoGrado'
+  models.EstudianteVinculacionTrabajoGrado:
+    title: EstudianteVinculacionTrabajoGrado
+    type: object
+    properties:
+      Activo:
+        type: boolean
+      Estudiante:
+        type: string
+      FechaFin:
+        type: string
+        format: datetime
+      FechaInicio:
+        type: string
+        format: datetime
+      Id:
+        type: integer
+        format: int64
+      RolTrabajoGrado:
+        type: integer
+        format: int64
+      TrabajoGrado:
+        $ref: '#/definitions/models.TrabajoGrado'
+      Usuario:
+        type: integer
+        format: int64
   models.EvaluacionTrabajoGrado:
     title: EvaluacionTrabajoGrado
     type: object
@@ -6289,7 +6435,8 @@ definitions:
         type: integer
         format: int64
       Modalidad:
-        $ref: '#/definitions/models.Modalidad'
+        type: integer
+        format: int64
   models.Modalidad:
     title: Modalidad
     type: object
@@ -6579,9 +6726,9 @@ definitions:
     type: object
     properties:
       AsignaturasDeTrabajoDeGrado:
-        $ref: '#/definitions/214757.<nil>.AsignaturaTrabajoGrado'
+        $ref: '#/definitions/218771.<nil>.AsignaturaTrabajoGrado'
       EspaciosAcademicos:
-        $ref: '#/definitions/214698.<nil>.EspacioAcademicoInscrito'
+        $ref: '#/definitions/218712.<nil>.EspacioAcademicoInscrito'
       EstudianteTrabajoGrado:
         $ref: '#/definitions/models.EstudianteTrabajoGrado'
       RespuestaActualizada:
@@ -6595,9 +6742,9 @@ definitions:
     type: object
     properties:
       AsignaturasDeTrabajoDeGrado:
-        $ref: '#/definitions/218281.<nil>.AsignaturaTrabajoGrado'
+        $ref: '#/definitions/222295.<nil>.AsignaturaTrabajoGrado'
       EspaciosAcademicosCalificados:
-        $ref: '#/definitions/218221.<nil>.EspacioAcademicoInscrito'
+        $ref: '#/definitions/222235.<nil>.EspacioAcademicoInscrito'
       EvaluacionTrabajoGrado:
         $ref: '#/definitions/models.EvaluacionTrabajoGrado'
       TrabajoDeGradoTerminado:
@@ -6621,17 +6768,17 @@ definitions:
     type: object
     properties:
       CausaProrroga:
-        $ref: '#/definitions/226449.<nil>.DetalleTrabajoGrado'
+        $ref: '#/definitions/230500.<nil>.DetalleTrabajoGrado'
       DetallesPasantia:
         $ref: '#/definitions/models.DetallePasantia'
       DetallesPasantiaExterna:
-        $ref: '#/definitions/226531.<nil>.DetalleTrabajoGrado'
+        $ref: '#/definitions/230582.<nil>.DetalleTrabajoGrado'
       DocumentoSolicitud:
         $ref: '#/definitions/models.DocumentoSolicitud'
       EspaciosAcademicos:
-        $ref: '#/definitions/226091.<nil>.EspacioAcademicoInscrito'
+        $ref: '#/definitions/230142.<nil>.EspacioAcademicoInscrito'
       EspaciosAcademicosInscritos:
-        $ref: '#/definitions/226359.<nil>.EspacioAcademicoInscrito'
+        $ref: '#/definitions/230410.<nil>.EspacioAcademicoInscrito'
       EstudianteTrabajoGrado:
         $ref: '#/definitions/models.EstudianteTrabajoGrado'
       ModalidadTipoSolicitud:
@@ -6651,15 +6798,15 @@ definitions:
       TrabajoGrado:
         $ref: '#/definitions/models.TrabajoGrado'
       Vinculaciones:
-        $ref: '#/definitions/225450.<nil>.VinculacionTrabajoGrado'
+        $ref: '#/definitions/229501.<nil>.VinculacionTrabajoGrado'
       VinculacionesCancelacion:
-        $ref: '#/definitions/225647.<nil>.VinculacionTrabajoGrado'
+        $ref: '#/definitions/229698.<nil>.VinculacionTrabajoGrado'
   models.TrRevisarTg:
     title: TrRevisarTg
     type: object
     properties:
       Comentarios:
-        $ref: '#/definitions/248812.<nil>.Comentario'
+        $ref: '#/definitions/252863.<nil>.Comentario'
       RevisionTrabajoGrado:
         $ref: '#/definitions/models.RevisionTrabajoGrado'
       TrabajoGrado:
@@ -6669,7 +6816,7 @@ definitions:
     type: object
     properties:
       DetalleTrabajoGrado:
-        $ref: '#/definitions/225125.<nil>.DetalleTrabajoGrado'
+        $ref: '#/definitions/229176.<nil>.DetalleTrabajoGrado'
       DocumentoEscrito:
         $ref: '#/definitions/models.DocumentoEscrito'
       DocumentoTrabajoGrado:
@@ -6677,7 +6824,7 @@ definitions:
       TrabajoGrado:
         $ref: '#/definitions/models.TrabajoGrado'
       Vinculaciones:
-        $ref: '#/definitions/224952.<nil>.VinculacionTrabajoGrado'
+        $ref: '#/definitions/229003.<nil>.VinculacionTrabajoGrado'
   models.TrSeleccionAdmitidos:
     title: TrSeleccionAdmitidos
     type: object
@@ -6686,13 +6833,13 @@ definitions:
     type: object
     properties:
       DetallesSolicitud:
-        $ref: '#/definitions/253875.<nil>.DetalleSolicitud'
+        $ref: '#/definitions/257926.<nil>.DetalleSolicitud'
       Respuesta:
         $ref: '#/definitions/models.RespuestaSolicitud'
       Solicitud:
         $ref: '#/definitions/models.SolicitudTrabajoGrado'
       UsuariosSolicitud:
-        $ref: '#/definitions/253915.<nil>.UsuarioSolicitud'
+        $ref: '#/definitions/257966.<nil>.UsuarioSolicitud'
   models.TrSubirArl:
     title: TrSubirArl
     type: object
@@ -6706,19 +6853,19 @@ definitions:
     type: object
     properties:
       AreasTrabajoGrado:
-        $ref: '#/definitions/256341.<nil>.AreasTrabajoGrado'
+        $ref: '#/definitions/260392.<nil>.AreasTrabajoGrado'
       AsignaturasTrabajoGrado:
-        $ref: '#/definitions/256441.<nil>.AsignaturaTrabajoGrado'
+        $ref: '#/definitions/260492.<nil>.AsignaturaTrabajoGrado'
       DocumentoEscrito:
         $ref: '#/definitions/models.DocumentoEscrito'
       DocumentoTrabajoGrado:
         $ref: '#/definitions/models.DocumentoTrabajoGrado'
       EstudianteTrabajoGrado:
-        $ref: '#/definitions/256196.<nil>.EstudianteTrabajoGrado'
+        $ref: '#/definitions/260247.<nil>.EstudianteTrabajoGrado'
       TrabajoGrado:
         $ref: '#/definitions/models.TrabajoGrado'
       VinculacionTrabajoGrado:
-        $ref: '#/definitions/256388.<nil>.VinculacionTrabajoGrado'
+        $ref: '#/definitions/260439.<nil>.VinculacionTrabajoGrado'
   models.TrVinculadoRegistrarNota:
     title: TrVinculadoRegistrarNota
     type: object
@@ -6916,6 +7063,9 @@ tags:
 - name: estudiante_trabajo_grado
   description: |
     EstudianteTrabajoGradoController operations for EstudianteTrabajoGrado
+- name: estudiante_vinculacion_trabajo_grado
+  description: |
+    Estudiante_Vinculacion_Trabajo_GradoController operations for Estudiante_Vinculacion_Trabajo_Grado
 - name: estado_asignatura_trabajo_grado
   description: |
     EstadoAsignaturaTrabajoGradoController operations for EstadoAsignaturaTrabajoGrado
